# orm-deep-dive

./: README.md  models.dot  pyproject.toml
core/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
core/management/commands/: populate_db.py
core/migrations/: 0001_initial.py  0002_rating.py  0002_sale_expenditure.py  0003_restaurant_capacity.py  0003_restaurant_restaurant_type.py  0004_restaurant_nickname.py  0004_sale.py  0005_alter_restaurant_nickname.py  0005_alter_restaurant_options_alter_rating_rating_and_more.py  0006_product_order.py  0007_comment.py  0008_rating_rating_valid_value.py  0009_restaurant_valid_latitude_restaurant_valid_longitude.py  0010_restaurant_restaurant_name_unique_insensitive.py  0011_alter_restaurant_nickname.py  0012_sale_profit.py  0013_sale_suggested_tip.py  0014_event.py
core/templates/core/: index.html  order_product.html  restaurant_detail.html
notes/: lesson-01.md  lesson-02.md  lesson-03.md  lesson-04.md  lesson-05.md  lesson-06.md  lesson-07.md  lesson-08.md  lesson-09.md  lesson-10.md  lesson-11.md  lesson-12.md  lesson-13.md  lesson-14.md  lesson-15.md  lesson-16.md  lesson-17.md  lesson-18.md  lesson-19.md  lesson-20.md  lesson-21.md  lesson-22.md  lesson-23.md  lesson-24.md
project/: settings.py  urls.py
scripts/: orm_script.py
